--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,8 @@
 
 .nav{
     position: fixed;
-    bottom: 0;
+    margin-bottom: 5px;
+    bottom: 5px;
 }
 
 .nav li{
